redesign 'Masa Reformasi di Indonesia' page

--- a/materi/masa-reformasi-di-indonesia/index.html
+++ b/materi/masa-reformasi-di-indonesia/index.html
@@ -16,39 +16,58 @@
 
 <body>
 
+  <div id="top"></div>
+
   <!-- ========== NAVBAR ========== -->
-  <nav id="top">
+  <div class="navbar">
+    <nav>
+      <div class="container">
+        <div class="navbar-brand">
+          <a href="../../index.html">SEJARAHKU</a>
+        </div>
+        <ul class="navbar-items">
+          <li><a href="../../index.html#materi"><i class="bi bi-journal-text"></i> Materi</a></li>
+          <li><a href="../../index.html#developers"><i class="bi bi-people"></i> Developers</a></li>
+        </ul>
+        <div class="navbar-end">
+          <a href="https://github.com/adiiaryasutaa/sejarahku"><i class="bi bi-github"></i></a>
+        </div>
+      </div>
+    </nav>
+  </div>
+  <!-- ========== NAVBAR ========== -->
+
+
+
+  <!-- ========== PAGE NAVBAR ========== -->
+  <div class="page-navbar">
     <div class="container">
-      <ul class="nav-page">
+      <ul class="page-navbar-list">
         <li><a href="../../index.html">Sejarahku</a></li>
         <li><a href="../../index.html#materi">Materi</a></li>
         <li>Masa Reformasi di Indonesia</li>
       </ul>
-      <div class="author">
+      <div id="author">
         Author <strong>Adi Aryasuta</strong>
         <img src="../../assets/img/profile-picture/cecep.svg" alt="Adi Aryasuta">
       </div>
     </div>
-  </nav>
-  <!-- ========== NAVBAR ========== -->
+  </div>
+  <!-- ========== PAGE NAVBAR ========== -->
 
 
 
-  <!-- ========== EXPLANATION ========== -->
-  <section>
-    <div class="main-title">
-      Masa Reformasi di Indonesia
-    </div>
+  <!-- ========== MAIN CONTENT ========== -->
+  <div id="main-content">
+    <div class="container">
+      <!-- ========== CONTENT ========== -->
 
-    <div class="hero-banner">
-      <img src="../../assets/img/materi-cover/masa-reformasi-di-indonesia.svg" alt="masa-reformasi-di-indonesia.svg">
-    </div>
+      <h1 class="main-content-title">Masa Reformasi di Indonesia</h1>
 
-    <div class="sub">
-      <div class="sub-title">
-        <h2><strong>Pengertian</strong></h2>
-      </div>
-      <div class="sub-explanation">
+      <img class="hero-banner" src="../../assets/img/materi-cover/masa-reformasi-di-indonesia.svg"
+        alt="masa-reformasi-di-indonesia.svg">
+
+      <div>
         <p>
           Reformasi secara etimologis berasal dari kata “reformation” dengan akar kata “reform” yang secara semantik
           bermakna “make or become better by removing or putting right what is bad or wrong” artinya membuat atau
@@ -58,20 +77,14 @@
           Reformasi di Indonesia juga merujuk pada suatu masa atau era setelah Orde Baru.
         </p>
       </div>
-    </div>
 
-    <div class="sub">
-      <div class="sub-title">
+      <div>
         <h2><strong>Latar Belakang</strong></h2>
-      </div>
-      <div class="sub-explanation">
         <ul>
           <li>
             <dl>
               <dt><i><b>REZIM YANG MARUK KEKUASAAN</b></i></dt>
-              <dd>Presiden Soeharto dan pemerintahan Orde Baru berkuasa selama 32 tahun dan jadi salah satu rezim terama
-                di dunia.</dd>
-              <br>
+              <dd>Presiden Soeharto dan pemerintahan Orde Baru berkuasa selama 32 tahun dan jadi salah satu rezim terama di dunia.</dd>
             </dl>
           </li>
           <li>
@@ -79,14 +92,12 @@
               <dt><i><b>KETIDAKADILAN PEMERINTAH</b></i></dt>
               <dd>Selama 32 tahun berkuasa, pemerintah Orde Baru kerap menerapkan kebijakan yang serba tidak adil bagi
                 segenap kalangan masyarakat. Yang diuntungkan adalah pemerintah itu sendiri beserta kroni-kroninya.</dd>
-              <br>
             </dl>
           </li>
           <li>
             <dl>
               <dt><i><b>MARAK PENYELEWENGAN</b></i></dt>
               <dd>Maraknya penyelewengan, bahkan lebih parah dari masa Orde Lama.</dd>
-              <br>
             </dl>
           </li>
           <li>
@@ -95,7 +106,6 @@
               <dd>Pada akhir masa Orde Baru, krisis multidimensi ini menyeruak dengan jelas di masyarakat dan turut
                 meruntuhkan Orde Baru. Krisis multidimensi ini meliputi krisis dalam bidang POLITIK, EKONOMI, SOSIAL
                 BUDAYA, dan krisis dalam BIDANG LEGITIMASI KEPERCAYAAN.</dd>
-              <br>
             </dl>
           </li>
           <li>
@@ -103,45 +113,32 @@
               <dt><i><b>AKSI MASSA MAHASISWA</b></i></dt>
               <dd>Kaum mahasiswa turun ke jalan melakukan demonstrasi, Kekuatan mahasiswa akhirnya mampu memaksa
                 Presiden Soeharto turun jabatan dan menandai jatuhnya Orde Baru sekaligus lahirnya era Reformasi.</dd>
-              <br>
             </dl>
           </li>
         </ul>
       </div>
-    </div>
 
-    <div class="sub">
-      <div class="sub-title">
+      <div>
         <h2><strong>Krisis Multidimensi</strong></h2>
-      </div>
-      <div class="sub-explanation">
         <ul>
           <li>
             <dl>
               <dt><i><b>KRISIS EKONOMI (MONETER)</b></i></dt>
-              <dd>Orde Baru terkenal dengan pembangunan dan pertumbuhan ekonominya yang pesat namun, pondasi pembangunan
-                itu rapuh karena bermodal pinjaman/hutang luar negeri. Ketika wilayah Asia Tenggara dilanda krisis
-                moneter, ekonomi Indonesia tidak mampu bertahan dan akhirnya tumbang.</dd>
-              <br>
+              <dd>Orde Baru terkenal dengan pembangunan dan pertumbuhan ekonominya yang pesat namun, pondasi pembangunan itu rapuh karena bermodal pinjaman/hutang luar negeri. Ketika wilayah Asia Tenggara dilanda krisis moneter, ekonomi Indonesia tidak mampu bertahan dan akhirnya tumbang.</dd>
             </dl>
           </li>
           <li>
             <dl>
               <dt><i><b>KRISIS POLITIK PEMERINTAH</b></i></dt>
-              <dd>Pemerintah Orde Baru menerapkan kebijakan yang serba tidak adil bagi segenap kalangan masyarakat dan
-                mayoritas kebijakan itu ditujukan dalam rangka melanggengkan kekuasaan pemerintahan Presiden Soeharto.
+              <dd>Pemerintah Orde Baru menerapkan kebijakan yang serba tidak adil bagi segenap kalangan masyarakat dan mayoritas kebijakan itu ditujukan dalam rangka melanggengkan kekuasaan pemerintahan Soeharto.
               </dd>
-              <br>
             </dl>
           </li>
           <li>
             <dl>
               <dt><i><b>KRISIS LEGITIMASI KEPERCAYAAN</b></i></dt>
               <dd>Presiden Soeharto yang terus berkuasa ditambah dengan berbagai penyelewengan yang dilakukan serta
-                ragam krisis yang terjadi membuat masyarakat/rakyat mulai muak dan hilang kepercayaan terhadap
-                pemerintah. Inilah yang disebut krisis legitimasi kepercayaan, yakni kondisi dimana rakyat sudah tidak
-                percaya lagi dengan pemerintah yang berkuasa.</dd>
-              <br>
+                ragam krisis yang terjadi membuat masyarakat/rakyat mulai muak dan hilang kepercayaan terhadap pemerintah. Inilah yang disebut krisis legitimasi kepercayaan, yakni kondisi dimana rakyat sudah tidak percaya lagi dengan pemerintah yang berkuasa.</dd>
             </dl>
           </li>
           <li>
@@ -150,48 +147,36 @@
               <dd>Pada saat akhir masa Orde Baru, etnis Tionghoa juga menjadi kambing hitam atas terjadinya krismon
                 sehingga banyak dari mereka yang meninggal, diperkosa, serta ruko mereka dijarah dan dibakar. Banyak
                 yang akhirnya mengungsi meninggalkan Indonesia.</dd>
-              <br>
             </dl>
           </li>
           <li>
             <dl>
               <dt><i><b>KRISIS HORIZONTAL DAN VERTIKAL</b></i></dt>
               <dd>Krisis antar suku dan masyarakat juga beberapa kali terjadi, juga beberapa kali terjadi konflik
-                vertikal antara pemerintah dan masyarakat yang berujung pada tindakan pelanggaran HAM berat dalam bentuk
-                peristiwa Malari, Tanjung Priok, Trisakti, dan lain sebagainya.</dd>
-              <br>
+                vertikal antara pemerintah dan masyarakat yang berujung pada tindakan pelanggaran HAM berat dalam bentuk peristiwa Malari, Tanjung Priok, Trisakti, dan lain sebagainya.</dd>
             </dl>
           </li>
         </ul>
       </div>
-    </div>
 
-    <div class="sub">
-      <div class="sub-title">
+      <div>
         <h2><strong>Jatuhnya Orde Baru</strong></h2>
-      </div>
-      <div class="sub-explanation">
         <p>
           Berawal dari krisis multidimensi yang menyebabkan masyarakat mulai tidak percaya pada peran pemerintah.
           Kondisi yang serba sulit memunculkan gejolak dalam masyarakat. Rakyat menuntut Presiden Soeharto untuk mundur.
         </p>
-
         <ul>
           <li>
             <dl>
               <dt><i><b>DIGERAKAN MAHASISWA</b></i></dt>
-              <dd>Gerah terhadap situasi yang kian tak kondusif, berbagai elemen mahasiswa dan masyarakat mulai turun ke
-                jalan untuk melakukan demonstrasi dan aksi damai.</dd>
-              <br>
+              <dd>Gerah terhadap situasi yang kian tak kondusif, berbagai elemen mahasiswa dan masyarakat mulai turun ke jalan untuk melakukan demonstrasi dan aksi damai.</dd>
             </dl>
           </li>
           <li>
             <dl>
               <dt><i><b>4 MAHASISWA TRISAKTI TEWAS</b></i></dt>
               <dd>Tanggal 12 Mei 1998, empat Mahasiswa Universitas Trisakti yang turut dalam aksi tewas tertembak.
-                Mereka adalah ELANG MULYA LESMANA, HAFIDHIN ROYAN, HENDRIWAN SIE, HERI HARTANTO. Di Yogyakarta, turut
-                tewas MOSES GATOTKACA.</dd>
-              <br>
+                Mereka adalah <b>Elang Mulya Lesmana, Hafidhin Royan, Hendriwan Sie, Heri Hartono</b>. Di Yogyakarta, turut tewas <b>Moses Gatotkaca</b>.</dd>
             </dl>
           </li>
           <li>
@@ -199,7 +184,6 @@
               <dt><i><b>RESUFFLE KABINER</b></i></dt>
               <dd>19 Mei 1998, suasana kian tegang dan terjadi aksi demonstarasi besar-besaran. Soeharto meresuffle
                 kabinet Pembangunan VI dan mengundang tokoh-tokoh masyarakat untuk berdiskusi.</dd>
-              <br>
             </dl>
           </li>
           <li>
@@ -207,31 +191,25 @@
               <dt><i><b>DUDUKI GEDUNG MPR-DPR</b></i></dt>
               <dd>20 Mei 1998, mahasiswa dan tokoh-tokoh pengerak Reformasi dari berbagai elemen menduduki gedung
                 MPR-DPR RI.</dd>
-              <br>
             </dl>
           </li>
           <li>
             <dl>
               <dt><i><b>SOEHARTO TURUN</b></i></dt>
-              <dd>21 Mei 1998, atas desakan kondisi dan berbagai pihak, Presiden Soeharto mengundurkan diri bertempat di
-                Istana Negara melalui naskah dengan judul: “Pernyataan Berhenti sebagai Presiden RI”.</dd>
-              <br>
+              <dd>21 Mei 1998, atas desakan kondisi dan berbagai pihak, Presiden Soeharto mengundurkan diri bertempat di Istana Negara melalui naskah dengan judul: “Pernyataan Berhenti sebagai Presiden RI”.</dd>
             </dl>
           </li>
+          <li>
+            <strong>
+              Diangkatnya B.J. Habibie menjadi Presiden RI. Sekaligus menandai akhir dari Orde Baru dan dimulainya Masa
+              Reformasi.
+            </strong>
+          </li>
         </ul>
-
-        <strong>
-          Diangkatnya B.J. Habibie menjadi Presiden RI. Sekaligus menandai akhir dari Orde Baru dan dimulainya Masa
-          Reformasi.
-        </strong>
       </div>
-    </div>
 
-    <div class="sub">
-      <div class="sub-title">
+      <div>
         <h2><strong>Agenda atau Tujuan Reformasi</strong></h2>
-      </div>
-      <div class="sub-explanation">
         <ul>
           <li>
             <dl>
@@ -240,7 +218,7 @@
                 pembangunan, dan banyak juga penyelewengan yang dilakukan olehnya dan jajaran pemerintahannya, terutama
                 kroni dan anggota keluarganya. Banyaknya kasus KKN, pelanggaran HAM dan penyelewengan lainnya membuat
                 rakyat menyerukan Presiden Soeharto dan kroni kroninya untuk segera diadili.</dd>
-              <br>
+
             </dl>
           </li>
           <li>
@@ -250,7 +228,7 @@
                 pemerintah Orde Baru kerap menyelewengkannya. Beberapa pasal yang dinilai tidak relevan dan cenderung
                 menjadi “pasal karet” dibiarkan saja dan tidak pernah direvisi. Tujuannya adalah untuk melanggengkan
                 kekuasaan pemerintah.</dd>
-              <br>
+
             </dl>
           </li>
           <li>
@@ -259,7 +237,7 @@
               <dd>Pemerintahan Orde Baru yang bersifat militeristik didukung oleh pihak militer. Ini dikarenakan adanya
                 aturan Dwifungsi ABRI yang memberikan akses bagi pihak militer untuk turut serta dalam pemerintahan
                 sipil.</dd>
-              <br>
+
             </dl>
           </li>
           <li>
@@ -268,7 +246,7 @@
               <dd>Hukum yang seringkali diselewengkan dan penerapannya yang tidak adil membuat Lembaga peradilan
                 (yudikatif) tidak memiliki wibawa yang semestinya. Akibatnya, banyak terjadi pelanggaran hukum dan
                 konsitusi.</dd>
-              <br>
+
             </dl>
           </li>
           <li>
@@ -277,38 +255,38 @@
               <dd>Maraknya kasus KKN dalam tubuh pemerintahan yang dilakukan oleh Presiden Soeharto dan kroni serta
                 anggota keluarganya menyebabkan negara mengalami kerugian dalam jumlah yang besar. Keroposnya pondasi
                 ekonomi Indonesia sehingga tidak mampu bertahan menghadapi arus krisis moneter tahun 1998.</dd>
-              <br>
+
             </dl>
           </li>
         </ul>
       </div>
-    </div>
 
-    <!-- ========== BACK TO TOP ========== -->
-    <div class="to-top">
-      <a href="#top" type="button"><i class="bi bi-arrow-up"></i> Back to top</a>
-    </div>
-    <!-- ========== BACK TO TOP ========== -->
+      <!-- ========== BACK TO TOP ========== -->
+      <div id="to-top">
+        <a href="#top" type="button"><i class="bi bi-arrow-up"></i> Back to top</a>
+      </div>
+      <!-- ========== BACK TO TOP ========== -->
 
-  </section>
-  <!-- ========== EXPLANATION ========== -->
+    </div>
+  </div>
+  <!-- ========== MAIN CONTENT ========== -->
 
 
 
   <!-- ========== FOOTER ========== -->
-	<footer>
-		<div class="container">
-			<div class="top">
-				<a href="../../index.html#utama"><i class="bi bi-house"></i> Home</a> •
-				<a href="../../index.html#materi"><i class="bi bi-journal-text"></i> Materi</a> •
-				<a href="../../index.html#developers"><i class="bi bi-people"></i> Developers</a>
-			</div>
-			<div class="bottom">
-				© 2021 Power Rangers | Made with <i class="bi bi-heart-fill" style="color: red;"></i> in Bali, Indonesia
-			</div>
-		</div>
-	</footer>
-	<!-- ========== FOOTER ========== -->
+  <footer>
+    <div class="container">
+      <div class="navigations">
+        <a href="../../index.html#utama"><i class="bi bi-house"></i> Home</a> •
+        <a href="../../index.html#materi"><i class="bi bi-journal-text"></i> Materi</a> •
+        <a href="../../index.html#developers"><i class="bi bi-people"></i> Developers</a>
+      </div>
+      <div class="bottom">
+        © 2021 Power Rangers | Made with <i class="bi bi-heart-fill" style="color: red;"></i> in Bali, Indonesia
+      </div>
+    </div>
+  </footer>
+  <!-- ========== FOOTER ========== -->
 
 </body>
 
