a change on 'proklamasi kemerdekaan'

--- a/materi/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal/index.html
+++ b/materi/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal/index.html
@@ -144,34 +144,31 @@
           Setelah Indonesia merdeka pada tanggal 17 Agustus 1945, keesokan harinya, PPKI segera bersidang untuk membentuk pemerintahan awal RI. Total, PPKI melakukan tiga sidang.
         </p>
       
-        <ul style="list-style: none; margin-left: 2rem;">
+        <ul>
           <li>
-            <dl>
-              <dt><i><b>SIDANG PPKI 1 - 18 AGUSTUS 1945</b></i></dt>
-              <dd>Mengesahkan Undang-Undang Dasar 1945</dd>
-              <dd>Memilih dan mengangkat Soekarno sebagai Presiden dan Drs. Mohammad Hatta sebagai Wakil Presiden</dd>
-              <dd>Tugas Presiden sementara dibantu oleh Komite Nasional Indonesia Pusat (sebelum dibentuknya MPR dan DPR)
-              </dd>
-              <br>
-            </dl>
+            <i><b>SIDANG PPKI 1 - 18 AGUSTUS 1945</b></i>
+            <ol>
+              <li>Mengesahkan Undang-Undang Dasar 1945</li>
+              <li>Memilih dan mengangkat Soekarno sebagai Presiden dan Drs. Mohammad Hatta sebagai Wakil Presiden</li>
+              <li>Tugas Presiden sementara dibantu oleh Komite Nasional Indonesia Pusat (sebelum dibentuknya MPR dan DPR)</li>
+            </ol>
           </li>
           <li>
-            <dl>
-              <dt><i><b>SIDANG PPKI II - 19 AGUSTUS 1945</b></i></dt>
-              <dd>Membentuk 12 Kementerian dan 4 Menteri Negara</dd>
-              <dd>Membentuk Pemerintahan Daerah. Indonesia dibagi menjadi 8 provinsi yang dipimpin oleh seorang gubernur
-              </dd>
-              <dd>Pembentukan KNID</dd>
-              <br>
-            </dl>
+            <i><b>SIDANG PPKI II - 19 AGUSTUS 1945</b></i>
+            <ol>
+              <li>Membentuk 12 Kementerian dan 4 Menteri Negara</li>
+              <li>Membentuk Pemerintahan Daerah. Indonesia dibagi menjadi 8 provinsi yang dipimpin oleh seorang gubernur
+              </li>
+              <li>Pembentukan KNID</li>
+            </ol>
           </li>
           <li>
-            <dl>
-              <dt><i><b>SIDANG PPKI III - 22 AGUSTUS 1945</b></i></dt>
-              <dd>Membentuk Komite Nasional Indonesia</dd>
-              <dd>Membentuk Partai Nasional Indonesia</dd>
-              <dd>Membentuk Badan Keamanan Rakyat</dd>
-            </dl>
+            <i><b>SIDANG PPKI III - 22 AGUSTUS 1945</b></i>
+            <ol>
+              <li>Membentuk Komite Nasional Indonesia</li>
+              <li>Membentuk Partai Nasional Indonesia</li>
+              <li>Membentuk Badan Keamanan Rakyat</li>
+            </ol>
           </li>
         </ul>
       </div>
