--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
 			</div>
 			<div class="container-main">
 
-				<a href="materi/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal/index.html">
+				<a href="materi/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal/">
 					<div class="card">
 						<img class="card-img"
 							src="assets/img/materi-cover/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal.svg">
 						<div class="card-body">
 							<h4 class="card-title">Proklamasi Kemerdekaan & Pembentukan Pemerintahan Awal</h4>
-							<p class="card-desc">Description</p>
+							<p class="card-desc">Proklamasi Kemerdekaan Indonesia (Proclamation of Indonesian Independence) dilaksanakan pada hari Jumat, 17 Agustus 1945 (17 Agustus 2605 menurut tahun Jepang), ...</p>
 						</div>
 						<div class="card-footer">
 							<small>Author <strong>Adi Aryasuta</strong></small>
@@ -95,13 +95,13 @@
 					</div>
 				</a>
 
-				<a href="materi/upaya-mempertahankan-kemerdekaan-republik-indonesia/index.html">
+				<a href="materi/upaya-mempertahankan-kemerdekaan-republik-indonesia/">
 					<div class="card">
 						<img class="card-img"
 							src="assets/img/materi-cover/upaya-mempertahankan-kemerdekaan-republik-indonesia.svg">
 						<div class="card-body">
 							<h4 class="card-title">Upaya Mempertahankan Kemerdekaan Republik Indonesia</h4>
-							<p class="card-desc">Description</p>
+							<p class="card-desc">Beberapa alasan Belanda ingin menguasai Indonesia kembali yaitu perjanjian akhir Perang Dunia II, Belanda yang masih ingin menjajah Indonesia, SDA dan SDM yang ...</p>
 						</div>
 						<div class="card-footer">
 							<small>Author <strong>Iqbal Faturrohim</strong></small>
@@ -109,13 +109,13 @@
 					</div>
 				</a>
 
-				<a href="materi/ancaman-disintegrasi-bangsa-pada-masa-awal-kemerdekaan-indonesia/index.html">
+				<a href="materi/ancaman-disintegrasi-bangsa-pada-masa-awal-kemerdekaan-indonesia/">
 					<div class="card">
 						<img class="card-img"
 							src="assets/img/materi-cover/ancaman-disintegrasi-bangsa-pada-masa-awal-kemerdekaan.svg">
 						<div class="card-body">
 							<h4 class="card-title">Ancamana Disintegrasi Bangsa pada Masa Awal Kemerdekaan</h4>
-							<p class="card-desc">Description</p>
+							<p class="card-desc">Walaupun sudah menjadj negara yang dinyatakan merdeka, Indonesia mengalami banyak sekalk pemberontakan dari bangsa dan rakyatnya sendiri.</p>
 						</div>
 						<div class="card-footer">
 							<small>Author <strong>Iqbal Faturrohim</strong></small>
@@ -123,14 +123,14 @@
 					</div>
 				</a>
 
-				<a href="materi/kondisi-ri-pada-masa-awal-kemerdekaan-hingga-masa-demokrasi-liberal/index.html">
+				<a href="materi/kondisi-ri-pada-masa-awal-kemerdekaan-hingga-masa-demokrasi-liberal/">
 					<div class="card">
 						<img class="card-img"
 							src="assets/img/materi-cover/kondisi-ri-pada-masa-awal-kemerdekaan-hingga-masa-demokrasi-liberal.svg">
 						<div class="card-body">
 							<h4 class="card-title">Kondisi RI pada Masa Awal Kemerdekaan hingga Masa Demokrasi Liberal
 							</h4>
-							<p class="card-desc">Description</p>
+							<p class="card-desc">Di awal masa kemerdekaannya, Indonesia harus mengalami masalah baru di berbagai bidang, dan pemerintah harus menyandarkan diri pada orang-orang yang ...</p>
 						</div>
 						<div class="card-footer">
 							<small>Author <strong>Pera Pradnyani</strong></small>
@@ -138,12 +138,12 @@
 					</div>
 				</a>
 
-				<a href="materi/indonesia-pada-masa-demokrasi-terpimpin/index.html">
+				<a href="materi/indonesia-pada-masa-demokrasi-terpimpin/">
 					<div class="card">
 						<img class="card-img" src="assets/img/materi-cover/indonesia-pada-masa-demokrasi-terpimpin.svg">
 						<div class="card-body">
 							<h4 class="card-title">Indonesia Pada Masa Demokrasi Terpimpin</h4>
-							<p class="card-desc">Description</p>
+							<p class="card-desc">Konsep sistem Demokrasi Terpimpin pertama kali diumumkan oleh Presiden Soekarno dalam pembukaan sidang konstituante pada tanggal 10 November 1956.</p>
 						</div>
 						<div class="card-footer">
 							<small>Author <strong>Candra Manika</strong></small>
@@ -151,12 +151,12 @@
 					</div>
 				</a>
 
-				<a href="materi/indonesia-pada-masa-orde-baru/index.html">
+				<a href="materi/indonesia-pada-masa-orde-baru/">
 					<div class="card">
 						<img class="card-img" src="assets/img/materi-cover/indonesia-pada-masa-orde-baru.svg">
 						<div class="card-body">
 							<h4 class="card-title">Indonesia Pada Masa Orde Baru</h4>
-							<p class="card-desc">Description</p>
+							<p class="card-desc">Orde Baru seringkali disingkat Orba. Orde Baru bisa diartikan sebagai sebutan bagi masa pemerintahan Presiden Soeharto di Indonesia.</p>
 						</div>
 						<div class="card-footer">
 							<small>Author <strong>Sulton Akbar</strong></small>
@@ -164,12 +164,12 @@
 					</div>
 				</a>
 
-				<a href="materi/masa-reformasi-di-indonesia/index.html">
+				<a href="materi/masa-reformasi-di-indonesia/">
 					<div class="card">
 						<img class="card-img" src="assets/img/materi-cover/masa-reformasi-di-indonesia.svg">
 						<div class="card-body">
 							<h4 class="card-title">Masa Reformasi di Indonesia</h4>
-							<p class="card-desc">Description</p>
+							<p class="card-desc">Reformasi secara etimologis berasal dari kata “reformation” dengan akar kata “reform” yang secara semantik bermakna “make or become better by removing or putting right what ...</p>
 						</div>
 						<div class="card-footer">
 							<small>Author <strong>Adi Aryasuta</strong></small>
@@ -182,7 +182,7 @@
 						<img class="card-img" src="assets/img/materi-cover/peran-indonesia-bagi-perdamaian-dunia.svg">
 						<div class="card-body">
 							<h4 class="card-title">Peran Indonesia Bagi Perdamaian Dunia</h4>
-							<p class="card-desc">Description</p>
+							<p class="card-desc">Perdamaian dunia adalah sebuah gagasan kebebasan, perdamaian, dan kebahagiaan bagi seluruh negara dan/atau bangsa.</p>
 						</div>
 						<div class="card-footer">
 							<small>Author <strong>Sulton Akbar</strong></small>
