Fixed description 'Materi' card overflow

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							src="assets/img/materi-cover/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal.svg">
 						<div class="card-body">
 							<h4 class="card-title">Proklamasi Kemerdekaan & Pembentukan Pemerintahan Awal</h4>
-							<p class="card-desc">Proklamasi Kemerdekaan Indonesia (Proclamation of Indonesian Independence) dilaksanakan pada hari Jumat, 17 Agustus 1945 (17 Agustus 2605 menurut tahun Jepang), ...</p>
+							<p class="card-desc">Proklamasi Kemerdekaan Indonesia (Proclamation of Indonesian Independence) dilaksanakan pada hari Jumat, 17 Agustus 1945 (17 Agustus 2605 menurut tahun ...</p>
 						</div>
 						<div class="card-footer">
 							<small>Author <strong>Adi Aryasuta</strong></small>
@@ -101,7 +101,7 @@
 							src="assets/img/materi-cover/upaya-mempertahankan-kemerdekaan-republik-indonesia.svg">
 						<div class="card-body">
 							<h4 class="card-title">Upaya Mempertahankan Kemerdekaan Republik Indonesia</h4>
-							<p class="card-desc">Beberapa alasan Belanda ingin menguasai Indonesia kembali yaitu perjanjian akhir Perang Dunia II, Belanda yang masih ingin menjajah Indonesia, SDA dan SDM yang ...</p>
+							<p class="card-desc">Beberapa alasan Belanda ingin menguasai Indonesia kembali yaitu perjanjian akhir Perang Dunia II, Belanda yang masih ingin menjajah Indonesia, SDA dan SDM ...</p>
 						</div>
 						<div class="card-footer">
 							<small>Author <strong>Iqbal Faturrohim</strong></small>
@@ -130,7 +130,7 @@
 						<div class="card-body">
 							<h4 class="card-title">Kondisi RI pada Masa Awal Kemerdekaan hingga Masa Demokrasi Liberal
 							</h4>
-							<p class="card-desc">Di awal masa kemerdekaannya, Indonesia harus mengalami masalah baru di berbagai bidang, dan pemerintah harus menyandarkan diri pada orang-orang yang ...</p>
+							<p class="card-desc">Di awal masa kemerdekaannya, Indonesia harus mengalami masalah baru di berbagai bidang, dan pemerintah harus menyandarkan diri pada ...</p>
 						</div>
 						<div class="card-footer">
 							<small>Author <strong>Pera Pradnyani</strong></small>
@@ -169,7 +169,7 @@
 						<img class="card-img" src="assets/img/materi-cover/masa-reformasi-di-indonesia.svg">
 						<div class="card-body">
 							<h4 class="card-title">Masa Reformasi di Indonesia</h4>
-							<p class="card-desc">Reformasi secara etimologis berasal dari kata “reformation” dengan akar kata “reform” yang secara semantik bermakna “make or become better by removing or putting right what ...</p>
+							<p class="card-desc">Reformasi secara etimologis berasal dari kata “reformation” dengan akar kata “reform” yang secara semantik bermakna “make or become better by ...</p>
 						</div>
 						<div class="card-footer">
 							<small>Author <strong>Adi Aryasuta</strong></small>
