Updated navigation links

--- a/materi/masa-reformasi-di-indonesia/index.html
+++ b/materi/masa-reformasi-di-indonesia/index.html
@@ -23,11 +23,11 @@
     <nav>
       <div class="container">
         <div class="navbar-brand">
-          <a href="../../index.html">SEJARAHKU</a>
+          <a href="../../">SEJARAHKU</a>
         </div>
         <ul class="navbar-items">
-          <li><a href="../../index.html#materi"><i class="bi bi-journal-text"></i> Materi</a></li>
-          <li><a href="../../index.html#developers"><i class="bi bi-people"></i> Developers</a></li>
+          <li><a href="../../#materi"><i class="bi bi-journal-text"></i> Materi</a></li>
+          <li><a href="../../#developers"><i class="bi bi-people"></i> Developers</a></li>
         </ul>
         <div class="navbar-end">
           <a href="https://github.com/adiiaryasutaa/sejarahku"><i class="bi bi-github"></i></a>
@@ -43,8 +43,8 @@
   <div class="page-navbar">
     <div class="container">
       <ul class="page-navbar-list">
-        <li><a href="../../index.html">Sejarahku</a></li>
-        <li><a href="../../index.html#materi">Materi</a></li>
+        <li><a href="../../">Sejarahku</a></li>
+        <li><a href="../../#materi">Materi</a></li>
         <li>Masa Reformasi di Indonesia</li>
       </ul>
       <div id="author">
@@ -277,9 +277,9 @@
   <footer>
     <div class="container">
       <div class="navigations">
-        <a href="../../index.html#utama"><i class="bi bi-house"></i> Home</a> •
-        <a href="../../index.html#materi"><i class="bi bi-journal-text"></i> Materi</a> •
-        <a href="../../index.html#developers"><i class="bi bi-people"></i> Developers</a>
+        <a href="../../"><i class="bi bi-house"></i> Home</a> •
+        <a href="../../#materi"><i class="bi bi-journal-text"></i> Materi</a> •
+        <a href="../../#developers"><i class="bi bi-people"></i> Developers</a>
       </div>
       <div class="bottom">
         © 2021 Power Rangers | Made with <i class="bi bi-heart-fill" style="color: red;"></i> in Bali, Indonesia
