Navbar will change its style when scrolled

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
 	<!-- ========== NAVBAR ========== -->
-	<div class="navbar">
+	<div id="navbar">
     <nav>
       <div class="container">
         <div class="navbar-brand">
@@ -315,6 +315,8 @@
 		</div>
 	</footer>
 	<!-- ========== FOOTER ========== -->
+
+	<script src="assets/js/script.js"></script>
 
 </body>
 
